--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="printClock()">
 	<header>
 		<!-- 전체 배경 설정 -->
-		<img src="images/운동.webp" class="bg">
+		<img src="images/sports.webp" class="bg">
 			<!-- 시계 설정 -->
 			<div id="clock"> 
 			</div>
@@ -24,7 +24,7 @@
 
 			<div class="gnb">
                 <div class="logo">
-                    <a href="/index.html"><h2>healthylife</h2></a>
+                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
                 <ul class="nav">
 					<li><a href="./pages/login/join.html">가입</a></li>
@@ -50,6 +50,7 @@
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/clock.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/common.js"></script>
 
 </body>
 </html>
