--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -15,7 +15,7 @@
 	<header>
 			<div class="gnb">
                 <div class="logo">
-                    <a href="/index.html"><h2>healthylife</h2></a>
+                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
                 <ul class="nav">
 					<li><a href="/pages/login/join.html">가입</a></li>
