--- a/pages/menu/map.html
+++ b/pages/menu/map.html
@@ -17,7 +17,7 @@
 	<header>
 			<div class="gnb">
                 <div class="logo">
-                    <a href="/index.html"><h2>healthylife</h2></a>
+                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
                 <ul class="nav">
 					<li><a href="/pages/login/join.html">가입</a></li>
@@ -34,7 +34,7 @@
         <h2>Find</h2>
     </div>
     </br>
-    <h3 style="text-align: center; font-size: 25px; font-weight: lighter;">우리동네 검진기관 찾기</h3>
+    <h3 style="text-align: center; font-size: 25px; font-weight: lighter;">Find a medical examination institution</h3>
     </br>
 
 <!-- 카카오맵 -->
