--- a/pages/login/mypage.html
+++ b/pages/login/mypage.html
@@ -16,7 +16,7 @@
 	<header>
 			<div class="gnb">
                 <div class="logo">
-                    <a href="/index.html"><h2>healthylife</h2></a>
+                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
                 <ul class="nav">
 					<li><a href="join.html">가입</a></li>
