--- a/test.html
+++ b/test.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-    <p>나이 : <input type ="number" id ="age"> 세</p>
-    <p>키 : <input type ="number" id ="height"> m</p>
+    <p>키 : <input type ="number" id ="height"> cm</p>
     <p>몸무게 : <input type ="number" id ="weight"> kg</p>
     <p><input type ="button" id ="button" value ="확인"></p>
     <p id="bmi"></p> <!--bmi를 출력할 부분-->
