--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/clock.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/common.js"></script>
+	<!-- <script src="js/common.js"></script> -->
 
 </body>
 </html>
