--- a/pages/menu/weather.html
+++ b/pages/menu/weather.html
@@ -4,9 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title>메뉴1 weather</title>
-<link rel="stylesheet" href="/css/common.css">
+<link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/weather.css">
-<link rel="stylesheet" href="/library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/bxslider-4-4.2.12/dist/jquery.bxslider.min.css">
+<style>
+	#sun img{
+		width: 500px;
+		height: 490px;
+	}
+	#rain img{
+		width: 485px;
+		height: 400px;
+	}
+</style>
+
 </head>
 
 <body>
@@ -49,7 +61,7 @@
 			
 			<!-- 온도 출력 영역 -->
 			<aside class="temperature">
-				<h2 class="temp"></ㅗ>
+				<h2 class="temp"></h2>
 				<h2 class="temp_max">max</h2>
 				<h2 class="temp_min">min</h2>
 			</aside>
@@ -59,19 +71,17 @@
 	<!-- 사진 출력 영역 -->
 		<section class="imgBox">
 			<!-- 비올때 -->
+		</br>
+			<h2>오늘의 추천운동</h2>
+		</br>
 			<div id="rain">
-			</br>
-				<h2>오늘은 실내운동을 추천해 드립니다!</h2>
-			</br>
 				<img src="/images/yoga.jpg" alt="">
 				<img src="/images/runningmachine.jpg" alt="">
 				<img src="/images/swim.jpg" alt="">
 			</div>
+
 			<!-- 맑을때 -->
 			<div id="sun">
-			</br>
-				<h2>오늘은 날씨가 맑아 바깥운동을 추천해 드립니다!</h2>
-			</br>
 				<img src="/images/run.jpg" alt="">
 				<img src="/images/tracking.jpg" alt="">
 				<img src="/images/golf.webp" alt="">
@@ -83,11 +93,24 @@
 		<p>© 2021 Healthylife by kimyeseul</p>
 	</footer>
 
-	<!-- jquery 사용을 위한 설정 -->
-	<script src="/js/jquery-3.6.0.min.js"></script>
-	<!-- 사용자 정의 스크립트 사용을 위한 설정 -->
-	<script src="/js/weather.js"></script>
-	<!-- <script src="js/common.js"></script> -->
-</body>
 
+	<!-- jquery 사용을 위한 설정 -->
+	<script src="../../js/jquery-3.6.0.min.js"></script>
+	<script src="../../library/bxslider-4-4.2.12/dist/jquery.bxslider.min.js"></script>
+	<script src="../../library/bxslider-4-4.2.12/dist/jquery.bxslider.js"></script>
+	<!-- 사용자 정의 스크립트 사용을 위한 설정 -->
+	<script src="../../js/weather.js"></script>
+	<!-- <script src="js/common.js"></script> -->
+
+	<!-- <script>
+		$(document).ready(function(){
+		$("#rain").bxSlider();
+		});
+	
+		$(document).ready(function(){
+		$("#sun").bxSlider();
+		});
+	</script> -->
+
+</body>
 </html>
