--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title>healthy_life</title>
-<link rel="stylesheet" href="./css/common.css">
-<link rel="stylesheet" href="./css/main.css">
-<link rel="stylesheet" href="library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../css/common.css">
+<link rel="stylesheet" href="../../css/main.css">
+<link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
 
 
@@ -14,19 +14,19 @@
 	<header>
 		<div class="gnb">
             <div class="logo">
-                <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
+                <a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
             </div>
              <ul class="nav">
-				<li><a href="./pages/login/join.html">가입</a></li>
-                <li><a href="./pages/login/login.html">로그인</a></li>
-                <li><a href="./pages/menu/bmi.html">self 건강진단</a></li>
-                <li><a href="./pages/menu/map.html">장소검색</a></li>
-                <li><a href="./pages/menu/weather.html">운동날씨</a></li>
+				<li><a href="../../pages/login/join.html">가입</a></li>
+                <li><a href="../../pages/login/login.html">로그인</a></li>
+                <li><a href="../../pages/menu/bmi.html">self 건강진단</a></li>
+                <li><a href="../../pages/menu/map.html">장소검색</a></li>
+                <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
             </ul>
         </div>
 		
 			<!-- 전체 배경 설정 -->
-			<img src="images/sports.webp" class="bg">
+			<img src="../../images/sports.webp" class="bg">
 			<!-- 시계 설정 -->
 			<div id="clock"> 
 			</div>
@@ -42,9 +42,9 @@
 		</footer>
 
 	<!--js 파일-->
-	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/clock.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../../js/jquery-3.6.0.min.js"></script>
+	<script src="../../js/clock.js"></script>
+	<script src="../../js/main.js"></script>
 	<!-- <script src="js/common.js"></script> -->
 </body>
 </html>
