--- a/pages/menu/bmi.html
+++ b/pages/menu/bmi.html
@@ -4,23 +4,23 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title>메뉴3 bmi</title>
-<link rel="stylesheet" href="/css/common.css">
-<link rel="stylesheet" href="/css/bmi.css">
-<link rel="stylesheet" href="/library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../css/common.css">
+<link rel="stylesheet" href="../../css/bmi.css">
+<link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
 
 <body>
 	<header>
 			<div class="gnb">
                 <div class="logo">
-                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
+                    <a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
                 <ul class="nav">
-					<li><a href="/pages/login/join.html">가입</a></li>
-                    <li><a href="/pages/login/login.html">로그인</a></li>
-                    <li><a href="/pages/menu/bmi.html">self 건강진단</a></li>
-                    <li><a href="/pages/menu/map.html">장소검색</a></li>
-                    <li><a href="/pages/menu/weather.html">운동날씨</a></li>
+					<li><a href="../../pages/login/join.html">가입</a></li>
+                    <li><a href="../../pages/login/login.html">로그인</a></li>
+                    <li><a href="../../pages/menu/bmi.html">self 건강진단</a></li>
+                    <li><a href="../../pages/menu/map.html">장소검색</a></li>
+                    <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
                 </ul>
             </div>
         </div>
@@ -88,14 +88,14 @@
 
 
 	<!--js 파일-->
-	<script src="/js/jquery-3.6.0.min.js"></script>
+	<script src="../../js/jquery-3.6.0.min.js"></script>
     <!-- bmi 계산 js -->
-    <script src="/js/bmi.js"></script> 
+    <script src="../../js/bmi.js"></script> 
 
     <!-- chart.js 라이브러리 이용  -->
-    <script src="/js/chart.min.js"></script> 
-    <script src="/js/Bmi_chart.js"></script> 
-    <script src="js/common.js"></script>
+    <script src="../../js/chart.min.js"></script> 
+    <script src="../../js/Bmi_chart.js"></script> 
+    <script src="../..js/common.js"></script>
 
 </body>
 </html>
