--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -4,29 +4,28 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title>join</title>
-<link rel="stylesheet" href="/css/common.css">
-<link rel="stylesheet" href="/css/login.css">
-<link rel="stylesheet" href="/library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../css/common.css">
+<link rel="stylesheet" href="../../css/login.css">
+<link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-
 </head>
 
 <body>
 	<header>
-			<div class="gnb">
-                <div class="logo">
-                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
-                </div>
-                <ul class="nav">
-					<li><a href="/pages/login/join.html">가입</a></li>
-                    <li><a href="/pages/login/login.html">로그인</a></li>
-                    <li><a href="/pages/menu/bmi.html">self 건강진단</a></li>
-                    <li><a href="/pages/menu/map.html">장소검색</a></li>
-                    <li><a href="/pages/menu/weather.html">운동날씨</a></li>
-                </ul>
+        <div class="gnb">
+            <div class="logo">
+                <a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
             </div>
+            <ul class="nav">
+                <li><a href="../../pages/login/join.html">가입</a></li>
+                <li><a href="../../pages/login/login.html">로그인</a></li>
+                <li><a href="../../pages/menu/bmi.html">self 건강진단</a></li>
+                <li><a href="../../pages/menu/map.html">장소검색</a></li>
+                <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
+            </ul>
         </div>
-    </header>
+    </div>
+</header>
     
         <div class="container">
             <div class="login_container">
@@ -85,8 +84,8 @@
     </script>
 
 	<!--js 파일-->
-	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/login.js"></script>
+	<script src="../../js/jquery-3.6.0.min.js"></script>
+	<script src="../../js/login.js"></script>
 </body>
 </html>
 
