--- a/pages/menu/map copy 2.html
+++ b/pages/menu/map copy 2.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title>메뉴2 map</title>
-<link rel="stylesheet" href="/css/common.css">
-<link rel="stylesheet" href="/css/map.css">
-<link rel="stylesheet" href="/css/kakao.css">
-<link rel="stylesheet" href="/library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../css/common.css">
+<link rel="stylesheet" href="../../css/map.css">
+<link rel="stylesheet" href="../../css/kakao.css">
+<link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 <!-- 카카오맵 -->
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1bfb9e0a17abc783a36e7957860e2f95&libraries=services"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1bfb9e0a17abc783a36e7957860e2f95"></script>
@@ -17,18 +17,18 @@
 	<header>
 			<div class="gnb">
                 <div class="logo">
-                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
+                    <a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
                 <ul class="nav">
-					<li><a href="/pages/login/join.html">가입</a></li>
-                    <li><a href="/pages/login/login.html">로그인</a></li>
-                    <li><a href="/pages/menu/bmi.html">self 건강진단</a></li>
-                    <li><a href="/pages/menu/map.html">장소검색</a></li>
-                    <li><a href="/pages/menu/weather.html">운동날씨</a></li>
+					<li><a href="../../pages/login/join.html">가입</a></li>
+                    <li><a href="../../pages/login/login.html">로그인</a></li>
+                    <li><a href="../../pages/menu/bmi.html">self 건강진단</a></li>
+                    <li><a href="../../pages/menu/map.html">장소검색</a></li>
+                    <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
                 </ul>
             </div>
         </div>
-	</header>
+    </header>
 
     <div id="container">
         <h2>Find</h2>
@@ -72,10 +72,10 @@
 
 
 	<!--js 파일-->
-	<script src="/js/jquery-3.6.0.min.js"></script>
+	<script src="../../js/jquery-3.6.0.min.js"></script>
     <!-- 지도 js -->
-    <script src="/js/map.js"></script>
-    <script src="js/common.js"></script> 
+    <script src="../../js/map.js"></script>
+    <script src="../../js/common.js"></script> 
 
 </body>
 </html>
