--- a/pages/menu/weather.html
+++ b/pages/menu/weather.html
@@ -21,22 +21,22 @@
 
 </head>
 
-<body>
-	<header>
-			<div class="gnb">
-                <div class="logo">
-                    <a href="/index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
-                </div>
-                <ul class="nav">
-					<li><a href="/pages/login/join.html">가입</a></li>
-                    <li><a href="/pages/login/login.html">로그인</a></li>
-                    <li><a href="/pages/menu/bmi.html">self 건강진단</a></li>
-                    <li><a href="/pages/menu/map.html">장소검색</a></li>
-                    <li><a href="/pages/menu/weather.html">운동날씨</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+	<body>
+		<header>
+				<div class="gnb">
+					<div class="logo">
+						<a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
+					</div>
+					<ul class="nav">
+						<li><a href="../../pages/login/join.html">가입</a></li>
+						<li><a href="../../pages/login/login.html">로그인</a></li>
+						<li><a href="../../pages/menu/bmi.html">self 건강진단</a></li>
+						<li><a href="../../pages/menu/map.html">장소검색</a></li>
+						<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
+					</ul>
+				</div>
+			</div>
+		</header>
 
         <div id="container">
             <h2>Todays weather</h2>
@@ -75,16 +75,16 @@
 			<h2>오늘의 추천운동</h2>
 		</br>
 			<div id="rain">
-				<img src="/images/yoga.jpg" alt="">
-				<img src="/images/runningmachine.jpg" alt="">
-				<img src="/images/swim.jpg" alt="">
+				<img src="../../images/yoga.jpg" alt="">
+				<img src="../../images/runningmachine.jpg" alt="">
+				<img src="../../images/swim.jpg" alt="">
 			</div>
 
 			<!-- 맑을때 -->
 			<div id="sun">
-				<img src="/images/run.jpg" alt="">
-				<img src="/images/tracking.jpg" alt="">
-				<img src="/images/golf.webp" alt="">
+				<img src="../../images/run.jpg" alt="">
+				<img src="../../images/tracking.jpg" alt="">
+				<img src="../../images/golf.webp" alt="">
 			</div>
 		</section>
 </div>
