--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </div>
 		
 			<!-- 전체 배경 설정 -->
-			<img src="../../images/sports.webp" class="bg">
+			<img src="../../images/sports.webp" class="bg" alt="">
 			<!-- 시계 설정 -->
 			<div id="clock"> 
 			</div>
 	
 			<div id="content">
 				<h1>Exercise shortens the day, 
-				</br>but it makes your life longer</h1>
+				but it makes your life longer</h1>
 			</div>
 		</header>
 
@@ -45,7 +45,7 @@
 	<script src="../../js/jquery-3.6.0.min.js"></script>
 	<script src="../../js/clock.js"></script>
 	<script src="../../js/main.js"></script>
-	<!-- <script src="js/common.js"></script> -->
+	<script src="../../js/common.js"></script>
 </body>
 </html>
 
