--- a/pages/menu/bmi.html
+++ b/pages/menu/bmi.html
@@ -15,6 +15,21 @@
                 <div class="logo">
                     <a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
+                <div class="menu">
+                    <div class="trigger">
+                        <a href="#"><i class="fas fa-bars"></i></a>
+                    </div>
+                        <ul class="ham_box">
+                            <li><a href="../../pages/login/join.html">가입</a></li>
+                            <li><a href="../../pages/login/login.html">로그인</a></li>
+                            <li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
+                            <li><a href="../../pages/menu/map.html">장소검색</a></li>
+                            <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
+                            <div class="exit">
+                                <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
+                            </div>
+                        </ul>
+                    </div>
                 <ul class="nav">
 					<li><a href="../../pages/login/join.html">가입</a></li>
                     <li><a href="../../pages/login/login.html">로그인</a></li>
@@ -95,8 +110,7 @@
     <!-- chart.js 라이브러리 이용  -->
     <script src="../../js/chart.min.js"></script> 
     <script src="../../js/Bmi_chart.js"></script> 
-    <script src="../..js/common.js"></script>
-
+    <script src="../../js/common.js"></script>
 </body>
 </html>
 
