--- a/pages/menu/map.html
+++ b/pages/menu/map.html
@@ -19,6 +19,21 @@
                 <div class="logo">
                     <a href="../../index.html"><h2><i class="fas fa-dumbbell"></i> healthylife</h2></a>
                 </div>
+                <div class="menu">
+                    <div class="trigger">
+                        <a href="#"><i class="fas fa-bars"></i></a>
+                    </div>
+                        <ul class="ham_box">
+								<li><a href="../../pages/login/join.html">가입</a></li>
+								<li><a href="../../pages/login/login.html">로그인</a></li>
+								<li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
+								<li><a href="../../pages/menu/map.html">장소검색</a></li>
+								<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
+                            <div class="exit">
+                                <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
+                            </div>
+                        </ul>
+                    </div>
                 <ul class="nav">
 					<li><a href="../../pages/login/join.html">가입</a></li>
                     <li><a href="../../pages/login/login.html">로그인</a></li>
@@ -39,6 +54,12 @@
 
 <!-- 카카오맵 -->
     <div class="map_wrap">
+        <div class="map_open">
+            <a href="#"><i class="fas fa-map-marked-alt"></i></a>
+        </div>
+        <div class="map_close">
+            <a href="#"><i class="far fa-times-circle"></i></a>
+        </div>
         <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>    
             <div id="menu_wrap" class="bg_white">
                 <div class="option">
@@ -65,7 +86,6 @@
     <!-- 지도 js -->
     <script src="../../js/map.js"></script>
     <script src="../../js/common.js"></script> 
-
 </body>
 </html>
 
