--- a/pages/menu/map.html
+++ b/pages/menu/map.html
@@ -29,9 +29,9 @@
 								<li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
 								<li><a href="../../pages/menu/map.html">장소검색</a></li>
 								<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-                            <div class="exit">
+                            <ul class="exit">
                                 <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-                            </div>
+                            </ul>
                         </ul>
                     </div>
                 <ul class="nav">
