--- a/pages/menu/bmi.html
+++ b/pages/menu/bmi.html
@@ -18,6 +18,7 @@
                 <div class="menu">
                     <div class="trigger">
                         <a href="#"><i class="fas fa-bars"></i></a>
+
                     </div>
                         <ul class="ham_box">
                             <li><a href="../../pages/login/join.html">가입</a></li>
@@ -25,11 +26,13 @@
                             <li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
                             <li><a href="../../pages/menu/map.html">장소검색</a></li>
                             <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-                            <div class="exit">
+
+                            <ul class="exit">
                                 <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-                            </div>
+                            </ul>
                         </ul>
                     </div>
+
                 <ul class="nav">
 					<li><a href="../../pages/login/join.html">가입</a></li>
                     <li><a href="../../pages/login/login.html">로그인</a></li>
@@ -38,7 +41,6 @@
                     <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
                 </ul>
             </div>
-        </div>
     </header>
 
         <div id="container">
