--- a/pages/menu/weather.html
+++ b/pages/menu/weather.html
@@ -2,14 +2,14 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>메뉴1 weather</title>
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/weather.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 <link rel="stylesheet" href="../../library/bxslider-4-4.2.12/dist/jquery.bxslider.min.css">
 </head>
-
+</html>
 	<body>
 		<header>
 				<div class="gnb">
@@ -26,9 +26,9 @@
 								<li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
 								<li><a href="../../pages/menu/map.html">장소검색</a></li>
 								<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-								<div class="exit">
+								<ul class="exit">
 									<a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-								</div>
+								</ul>
 							</ul>
 						</div>
 					<ul class="nav">
@@ -79,20 +79,19 @@
 			<h2>오늘의 추천운동</h2>
 		</br>
 			<div id="rain">
-				<img src="../../images/yoga.jpg" >
-				<img src="../../images/runningmachine.jpg" >
-				<img src="../../images/swim.jpg">
-				<img src="../../images/trainning.jpg">
+				<img src="../../images/yoga.jpg" alt="요가" >
+				<img src="../../images/runningmachine.jpg" alt="런닝머신" >
+				<img src="../../images/swim.jpg" alt="수영" >
+				<img src="../../images/trainning.jpg" alt="홈트" >
 			</div>
 
 			<!-- 맑을때 -->
 			<div id="sun">
-				<img src="../../images/golf.jpg" >
-				<img src="../../images/tracking.jpg">
-				<img src="../../images/hiking.jpg">
-				<img src="../../images/run.jpeg">
+				<img src="../../images/golf.jpg" alt="골프" >
+				<img src="../../images/tracking.jpg" alt="트레킹">
+				<img src="../../images/hiking.jpg" alt="등산">
+				<img src="../../images/run.jpeg" alt="달리기">
 			</div>
-
 		</section>
 </div>
 
