--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>healthy_life</title>
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/main.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
-
 
 <body onload="printClock()">
 	<header>
@@ -27,9 +26,9 @@
 						<li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
 						<li><a href="../../pages/menu/map.html">장소검색</a></li>
 						<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-						<div class="exit">
+						<li class="exit">
 							<a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-						</div>
+						</li>
 					</ul>
 				</div>
 			<div>
