--- a/pages/menu/bmi.html
+++ b/pages/menu/bmi.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>메뉴3 bmi</title>
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/bmi.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
-
+</html>
 <body>
 	<header>
 			<div class="gnb">
@@ -27,9 +27,9 @@
                             <li><a href="../../pages/menu/map.html">장소검색</a></li>
                             <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
 
-                            <ul class="exit">
+                            <li class="exit">
                                 <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-                            </ul>
+                            </li>
                         </ul>
                     </div>
 
