--- a/pages/login/join.html
+++ b/pages/login/join.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>join</title>
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/join.css">
@@ -25,9 +25,9 @@
                             <li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
                             <li><a href="../../pages/menu/map.html">장소검색</a></li>
                             <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-                            <div class="exit">
+                            <li class="exit">
                                 <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-                            </div>
+                            </li>
                         </ul>
                     </div>
                 <ul class="nav">
@@ -38,7 +38,6 @@
                     <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
                 </ul>
             </div>
-        </div>
     </header>
     
         <div class="container">
