--- a/pages/menu/map.html
+++ b/pages/menu/map.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>메뉴2 map</title>
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/map.css">
@@ -29,9 +29,9 @@
 								<li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
 								<li><a href="../../pages/menu/map.html">장소검색</a></li>
 								<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-                            <ul class="exit">
+                            <li class="exit">
                                 <a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-                            </ul>
+                            </li>
                         </ul>
                     </div>
                 <ul class="nav">
@@ -42,7 +42,6 @@
                     <li><a href="../../pages/menu/weather.html">운동날씨</a></li>
                 </ul>
             </div>
-        </div>
     </header>
 
     <div id="container">
