--- a/pages/menu/weather.html
+++ b/pages/menu/weather.html
@@ -26,9 +26,9 @@
 								<li><a href="../../pages/menu/bmi.html">self건강진단</a></li>
 								<li><a href="../../pages/menu/map.html">장소검색</a></li>
 								<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
-								<ul class="exit">
+								<li class="exit">
 									<a href="#"><i class="far fa-times-circle" style="color: rgb(15, 15, 15); padding-left: 10px;"></i></a>
-								</ul>
+								</li>
 							</ul>
 						</div>
 					<ul class="nav">
@@ -39,7 +39,6 @@
 						<li><a href="../../pages/menu/weather.html">운동날씨</a></li>
 					</ul>
 				</div>
-			</div>
 		</header>
 
         <div id="container">
