--- a/pages/menu/map.html
+++ b/pages/menu/map.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../../css/map.css">
 <link rel="stylesheet" href="../../css/kakao.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/bootstrap-3.3.2-dist/css/bootstrap.min.css">
 <!-- 카카오맵 -->
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1bfb9e0a17abc783a36e7957860e2f95&libraries=services"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1bfb9e0a17abc783a36e7957860e2f95"></script>
