--- a/pages/menu/weather.html
+++ b/pages/menu/weather.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../../css/weather.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
 <link rel="stylesheet" href="../../library/bxslider-4-4.2.12/dist/jquery.bxslider.min.css">
+<link rel="stylesheet" href="../../library/bootstrap-3.3.2-dist/css/bootstrap.min.css">
 </head>
 </html>
 	<body>
