--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/main.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/bootstrap-3.3.2-dist/css/bootstrap.min.css">
 </head>
 
 <body onload="printClock()">
