--- a/pages/login/join.html
+++ b/pages/login/join.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/join.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/bootstrap-3.3.2-dist/css/bootstrap.min.css">
+
 </head>
 
 <body>
@@ -71,7 +73,7 @@
                     </div>
 
                     <div class="login_btn_wrap">
-                        <button class="login_btn">sign</button>
+                        <a class="btn btn-info" id="login_btn" style="width:210px; height: 50px; padding-top: 10px; font-size: 17px;">sign</a>
                     </div>
                 </div>
             </div>
