--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/login.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/bootstrap-3.3.2-dist/css/bootstrap.min.css">
 <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 </head>
 
@@ -65,7 +66,7 @@
                     </div>
 
                     <div class="login_btn_wrap">
-                        <button class="login_btn">Login</button>
+                        <a class="btn btn-info" id="login_btn" style="width:210px; height: 50px; padding-top: 10px; font-size: 17px;">Login</a>
                         </br>
                         <a id="kakao-login-btn"></a>
                         <a href="http://developers.kakao.com/login"></a>
