--- a/pages/menu/bmi.html
+++ b/pages/menu/bmi.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="../../css/common.css">
 <link rel="stylesheet" href="../../css/bmi.css">
 <link rel="stylesheet" href="../../library/fontawesome-free-5.15.3-web/css/all.min.css">
+<link rel="stylesheet" href="../../library/bootstrap-3.3.2-dist/css/bootstrap.min.css">
 </head>
 <body>
 	<header>
@@ -58,7 +59,7 @@
                 </br>
                 <p>몸무게 : <input type ="number" id ="weight"> kg</p>
                 </br>
-                <p><input type ="button" id ="button" value ="확인"></p>
+                <a class="btn btn-info" id="btn" style="width:130px; height: 50px; padding-top: 10px; font-size: 17px;">Click</a>
             </br>
                 <p id="bmi"></p> <!--bmi를 출력할 부분-->
             </div>
